2011-08-20  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13114]
	* stdio-common/Makefile (tests): Add bug24.
	* stdio-common/bug24.c: New file.

2011-08-19  Andreas Jaeger  <aj@suse.de>

	[BZ #13114]
	* libio/fileops.c (_IO_new_file_fopen): Fix handling of
	non-existant file when using close-on-exec mode.

2011-08-20  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_resolve): Fix CFI for
	the very first instruction.

	* sysdeps/x86_64/dl-trampoline.h: If MORE_CODE is defined, restore
	the CFI state in the end.
	* sysdeps/x86_64/dl-trampoline.S: Define MORE_CODE before first
	inclusion of dl-trampoline.h.
	Based on a patch by Jiri Olsa <jolsa@redhat.com>.

2011-08-19  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/powerpc/fpu/libm-test-ulps: Relax ctan (0.75 + 1.25 i)
	expectations for long double.

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/scandir64.c: Renamed
	from sysdeps/unix/sysv/linux/powerpc/scandir64.c.

2011-08-14  David S. Miller  <davem@davemloft.net>

	* sysdeps/unix/sysv/linux/Makefile (CFLAGS-tst-writev.c): The
	artificual limit depends upon the system page size.

2011-08-17  Ulrich Drepper  <drepper@gmail.com>

	* Makeconfig (override CFLAGS): Add library-specific CFLAGS.
	* resolv/Makefile: Define CFLAGS-libresolv.

2011-08-17  Andreas Schwab  <schwab@redhat.com>

	* nss/makedb.c (compute_tables): Make variables used in nested
	function static.

2011-08-17  Ulrich Drepper  <drepper@gmail.com>

	* elf/pldd-xx.c (r_debug): Explicitly add padding when needed.
	* elf/pldd.c (get_process_info): Use pread to re-read auxiliary vector
	if buffer was too small.

	* elf/pldd.c (main): Attach to all threads in the process.
	Rewrite /proc handling to use *at functions.

2011-08-16  Ulrich Drepper  <drepper@gmail.com>

	* elf/dl-open.c (_dl_show_scope): Take additional parameter which
	specifies first scope to show.
	(dl_open_worker): Update callers.  Move printing scope of new
	object to before the relocation.