@@ -1,5 +1,9 @@
 2011-08-20  Ulrich Drepper  <drepper@gmail.com>
 
+	* elf/dl-open.c (add_to_global): Report additions to the global scope
+	for LD_DEBUG=scopes.
+	(dl_open_worker): Also print scope of newly loaded dependencies.
+
 	[BZ #13114]
 	* stdio-common/Makefile (tests): Add bug24.
 	* stdio-common/bug24.c: New file.
